# numalgs

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/numalgs/: errors.hpp  functions.hpp  results.hpp  root_finding.hpp
pytests/: test_functions.py  test_root_finding.py
python/: CMakeLists.txt  bind_functions.cpp  bind_results.cpp  bind_root_finding.cpp  bindings.cpp  module.cpp
src/: CMakeLists.txt
src/functions/: operations.cpp  polynomials.cpp
src/results/: results.cpp
src/root_finding/: bisection.cpp  generic.cpp
tests/: CMakeLists.txt  test_functions.cpp  test_root_finding.cpp
